add default.url link to the headers of the dashboard tiles

--- a/corehq/apps/dashboard/static/dashboard/ng_partials/paginated_tile.html
+++ b/corehq/apps/dashboard/static/dashboard/ng_partials/paginated_tile.html
@@ -1,6 +1,6 @@
 <div class="col-md-3">
     <div class="panel panel-dashboard panel-dashboard-medium">
-        <div class="panel-heading">{{ title }}</div>
+        <div class="panel-heading"><a href="{{ default.url }}">{{ title }}</a></div>
         <div class="panel-body">
             <i class="fa fa-spinner fa-spin fa-5x" ng-show="showSpinner()"></i>
             <div class="list-group" ng-show="showItemList()">
