--- a/corehq/apps/dashboard/static/dashboard/ng_partials/icon_tile.html
+++ b/corehq/apps/dashboard/static/dashboard/ng_partials/icon_tile.html
@@ -1,6 +1,6 @@
 <div class="col-md-3">
     <div class="panel panel-dashboard panel-dashboard-medium">
-        <div class="panel-heading">{{ title }}</div>
+        <div class="panel-heading"><a href="{{ default.url }}">{{ title }}</a></div>
         <div class="panel-body">
             <a href="{{ url }}"
                class="dashboard-link"
