--- a/corehq/apps/dashboard/static/dashboard/ng_partials/icon_tile.html
+++ b/corehq/apps/dashboard/static/dashboard/ng_partials/icon_tile.html
@@ -18,7 +18,7 @@
                popover-trigger="mouseenter"
                popover-placement="top"
                title="">
-                <span class="dashboard-icon dashboard-icon-medium {{ icon }}"></span>
+                <i class="dashboard-icon dashboard-icon-medium {{ icon }}"></i>
             </a>
         </div>
     </div>
