--- a/corehq/apps/dashboard/static/dashboard/ng_partials/paginated_tile.html
+++ b/corehq/apps/dashboard/static/dashboard/ng_partials/paginated_tile.html
@@ -10,8 +10,8 @@
                title="">{{ title }}</a>
         </div>
         <div class="panel-body">
-            <div class="dashboard-icon-medium dashboard-icon-bg {{ default.icon }}"
-                 ng-show="showItemList()"></div>
+            <i class="dashboard-icon dashboard-icon-medium dashboard-icon-bg {{ default.icon }}"
+               ng-show="showItemList()"></i>
             <i class="fa fa-spinner fa-spin fa-5x" ng-show="showSpinner()"></i>
             <div class="list-group" ng-show="showItemList()">
                 <a class="list-group-item"
@@ -44,7 +44,7 @@
                popover-trigger="mouseenter"
                popover-placement="top"
                title="">
-                <span class="dashboard-icon dashboard-icon-medium {{ default.icon }}"></span>
+                <i class="dashboard-icon dashboard-icon-medium {{ default.icon }}"></i>
             </a>
         </div>
     </div>
