fix header links on icon tiles

--- a/corehq/apps/dashboard/static/dashboard/ng_partials/icon_tile.html
+++ b/corehq/apps/dashboard/static/dashboard/ng_partials/icon_tile.html
@@ -1,7 +1,7 @@
 <div class="col-md-3">
     <div class="panel panel-dashboard panel-dashboard-medium">
         <div class="panel-heading">
-            <a href="{{ default.url }}"
+            <a href="{{ url }}"
                popover-title="{{ title }}"
                popover="{{ helpText }}"
                popover-trigger="mouseenter"
