--- a/corehq/apps/app_manager/static/app_manager/ng_partials/form_summary_view.html
+++ b/corehq/apps/app_manager/static/app_manager/ng_partials/form_summary_view.html
@@ -1,9 +1,15 @@
 <div id="hq-sidebar" class="col-xs-4 col-sm-3 col-lg-2 col-hq-sidebar" role="navigation">
     <nav class="app-manager-content">
-        <ul class="nav nav-list">
-            <li>
-                <a href="#/case">
+        <ul class="nav nav-pills nav-stacked">
+            <li role="presentation" class="active">
+                <a>
                     <i class="fa fa-file-text-o"></i>
+                    Form Summary
+                </a>
+            </li>
+            <li role="presentation">
+                <a href="#/case">
+                    <i class="fa fa-envelope-square"></i>
                     Case Summary
                 </a>
             </li>
