Removed dashboard reference to icon-alternate-download as glyphicons is not used in CommCareHQ

--- a/corehq/apps/dashboard/static/dashboard/ng_partials/apps_paginated_tile.html
+++ b/corehq/apps/dashboard/static/dashboard/ng_partials/apps_paginated_tile.html
@@ -16,7 +16,7 @@
             <div class="list-group" ng-show="showItemList()">
                 <div class="list-group-item" data-ng-repeat="item in paginatedItems" >
                    <a href="{{ item.url }}">{{ item.name }}</a>
-                   <a class="list-group-item-icon" href="{{ item.release_manager_url }}"><i class="icon-alternate-download fa fa-download"></i></a>
+                   <a class="list-group-item-icon" href="{{ item.release_manager_url }}"><i class="fa fa-download"></i></a>
                 </div>
             </div>
             <pagination direction-links="true"
