--- a/corehq/apps/dashboard/static/dashboard/ng_partials/paginated_tile.html
+++ b/corehq/apps/dashboard/static/dashboard/ng_partials/paginated_tile.html
@@ -14,17 +14,33 @@
                ng-show="showItemList()"></i>
             <i class="fa fa-spinner fa-spin fa-5x" ng-show="showSpinner()"></i>
             <div class="list-group" ng-show="showItemList()">
-                <a class="list-group-item"
-                   href="{{ item.url }}"
-                   data-ng-repeat="item in paginatedItems"
-                   popover-placement="right"
-                   popover-title="{{ item.name_full }}"
-                   popover="{{ item.description }}"
-                   popover-trigger="mouseenter"
-                   track-analytics=""
-                   title="">
-                    {{ item.name }}
-                </a>
+                {% if item.secondary_url and item.secondary_url_icon %}
+                    <div class="list-group-item"
+                    data-ng-repeat="item in paginatedItems"
+                    popover-placement="right"
+                    popover-title="{{ item.name_full }}"
+                    popover="{{ item.description }}"
+                    popover-trigger="mouseenter"
+                    track-analytics=""
+                    title="">
+                        <a href="{{ item.url }}">{{ item.name }}</a>
+                        <a class="list-group-item-icon" href="{{ item.secondary_url }}">
+                            <i class="{{ item.secondary_url_icon }}"></i>
+                        </a>
+                    </div>
+                {% else %}
+                    <a class="list-group-item"
+                    href="{{ item.url }}"
+                    data-ng-repeat="item in paginatedItems"
+                    popover-placement="right"
+                    popover-title="{{ item.name_full }}"
+                    popover="{{ item.description }}"
+                    popover-trigger="mouseenter"
+                    track-analytics=""
+                    title="">
+                        {{ item.name }}
+                    </a>
+                {% endif %}
             </div>
             <pagination direction-links="true"
                         total-items="total"
